--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "discord-webhook-node",
-  "version": "1.1.8",
+  "name": "discord-ts-webhook",
+  "version": "1.1.9",
   "description": "Allows for easy webhook sending through discord's webhook API",
   "main": "./src/index.js",
   "exports": {
@@ -11,14 +11,14 @@
   "scripts": {
     "test": "mocha --timeout 50000"
   },
-  "author": "Matthew Mulfinger",
+  "author": "Lil Spoodermann",
   "license": "MIT",
   "keywords": [
     "Webhook",
     "Discord",
     "Bot"
   ],
-  "homepage": "https://github.com/matthew1232/discord-webhook-node#readme",
+  "homepage": "https://github.com/LilSpoodermann/discord-ts-webhook#readme",
   "dependencies": {
     "form-data": "^3.0.0",
     "node-fetch": "^2.6.0"
